--- a/pom.xml
+++ b/pom.xml
@@ -32,7 +32,7 @@
         <repository>
             <id>boundless</id>
             <name>Boundless Maven Repository</name>
-            <url>http://repo.boundlessgeo.org/main</url>
+            <url>http://repo.boundlessgeo.com/main/</url>
             <snapshots>
                 <enabled>true</enabled>
             </snapshots>
@@ -41,6 +41,21 @@
             <id>osgeo</id>
             <name>Open Source Geospatial Foundation Repository</name>
             <url>http://download.osgeo.org/webdav/geotools</url>
+        </repository>
+        <repository>
+            <id>geosolutions</id>
+            <name>GeoSolutions Repository</name>
+            <url>http://maven.geo-solutions.it/</url>
+        </repository>
+        <repository>
+            <id>unidata</id>
+            <name>Unidata UCAR Repository</name>
+            <url>https://artifacts.unidata.ucar.edu/content/repositories/unidata/</url>
+        </repository>
+        <repository>
+            <id>ecc</id>
+            <name>ECC Repository</name>
+            <url>https://github.com/ElectronicChartCentre/ecc-mvn-repo/raw/master/releases</url>
         </repository>
     </repositories>
     <build>
