--- a/pom.xml
+++ b/pom.xml
@@ -140,7 +140,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-shade-plugin</artifactId>
-                <version>1.7.1</version>
+                <version>3.0.0-SNAPSHOT</version>
                 <executions>
                     <execution>
                         <phase>package</phase>
@@ -150,6 +150,10 @@
                         <configuration>
                             <finalName>geo-shell-app-${project.version}</finalName>
                             <transformers>
+                                <transformer implementation="org.apache.maven.plugins.shade.resource.GroovyResourceTransformer">
+                                  <extModuleName>groovy-module</extModuleName>
+                                  <extModuleVersion>1.0.0</extModuleVersion>
+                                </transformer>
                                 <transformer implementation="org.apache.maven.plugins.shade.resource.AppendingTransformer">
                                     <resource>META-INF/spring.handlers</resource>
                                 </transformer>
@@ -180,4 +184,10 @@
             </plugin>
         </plugins>
     </build>
+    <pluginRepositories>
+        <pluginRepository>
+          <id>apache.snapshots</id>
+          <url>http://repository.apache.org/snapshots/</url>
+        </pluginRepository>
+    </pluginRepositories>
 </project>
