--- a/pom.xml
+++ b/pom.xml
@@ -18,7 +18,7 @@
         <dependency>
             <groupId>org.geoscript</groupId>
             <artifactId>geoscript-groovy</artifactId>
-            <version>1.14-SNAPSHOT</version>
+            <version>1.15-SNAPSHOT</version>
         </dependency>
         <dependency>
             <groupId>org.springframework.shell</groupId>
@@ -44,7 +44,7 @@
         <repository>
             <id>osgeo</id>
             <name>Open Source Geospatial Foundation Repository</name>
-            <url>http://download.osgeo.org/webdav/geotools</url>
+            <url>http://download.osgeo.org/webdav/geotools/</url>
         </repository>
         <repository>
             <id>geosolutions</id>
@@ -55,11 +55,6 @@
             <id>unidata</id>
             <name>Unidata UCAR Repository</name>
             <url>https://artifacts.unidata.ucar.edu/content/repositories/unidata/</url>
-        </repository>
-        <repository>
-            <id>ecc</id>
-            <name>ECC Repository</name>
-            <url>https://github.com/ElectronicChartCentre/ecc-mvn-repo/raw/master/releases</url>
         </repository>
     </repositories>
     <pluginRepositories>
