--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,14 @@
 dist: trusty
-
 language: java
-
 jdk:
     - oraclejdk8
+script:
+    - mvn clean package
+deploy:
+    provider: pages
+    skip-cleanup: true
+    github-token: $GITHUB_OAUTH_TOKEN
+    keep-history: true
+    local-dir: target/generated-docs
+    on:
+        branch: master
