Remove travisci and add github deploy action for docs.

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -25,3 +25,10 @@ jobs:
         with:
           name: geoshell.jar
           path: target/geo-shell-app-*.jar
+      - name: Deploy
+        uses: JamesIves/github-pages-deploy-action@3.7.1
+        with:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          BRANCH: gh-pages
+          FOLDER: target/generated-docs
+          CLEAN: false
