--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>org.geoshell</groupId>
     <artifactId>geo-shell</artifactId>
-    <version>0.12.0</version>
+    <version>0.13.0-SNAPSHOT</version>
     <packaging>jar</packaging>
     <name>geo-shell</name>
     <url>http://maven.apache.org</url>
@@ -25,7 +25,7 @@
         <dependency>
             <groupId>org.geoscript</groupId>
             <artifactId>geoscript-groovy</artifactId>
-            <version>1.20.0</version>
+            <version>1.21.0-SNAPSHOT</version>
         </dependency>
         <dependency>
             <groupId>org.springframework.shell</groupId>
